--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SwapStation | Africa's Clean Energy Swapping Network</title>
+    <meta name="description" content="SwapStation Mobility is building Africa's clean energy swapping backbone for commercial fleets, logistics operators and last-mile delivery.">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.svg">
+    <link rel="apple-touch-icon" href="/favicon.svg">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="SwapStation | Africa's Clean Energy Swapping Network">
+    <meta property="og:description" content="Track SwapStation Mobility’s latest milestones, partnerships and product updates powering Africa's energy transition.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://swapstation.mobility">
+    <meta property="og:image" content="https://swapstation.mobility/og-image.png">
+    <meta property="og:site_name" content="SwapStation Mobility">
+
+    <!-- Twitter / X -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="SwapStation | Africa's Clean Energy Swapping Network">
+    <meta name="twitter:description" content="SwapStation Mobility is building Africa's clean energy swapping backbone for commercial fleets and last‑mile logistics.">
+    <meta name="twitter:image" content="https://swapstation.mobility/og-image.png">
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
